# ocaml-microgpt

./: .gitignore  LICENSE  Makefile  README.md  autograd.opam  dune-project
.github/workflows/: build.yml
hugo/: Makefile  README.md  dune  hugo.ml
shakespeare/: Makefile  dune  shakespeare.ml
src/: Makefile  README.md  autograd.ml  backcomp.ml  dune  extlib.ml  microgpt.ml  microgpt.py
test/: Makefile  affine.ml  basic.ml  dune  extlib_test.ml  square.ml
train/: Makefile  README.md  dune  train0.ml  train0.py  train1.ml  train1.py  train2.ml  train2.py  train3.ml  train3.py  train4.ml  train4.py  train5.py
