(executable
 (name basic)
 (libraries autograd)
 (modules basic)
)

(rule
 (alias runtest)
 (action (run ./basic.exe))
)

(executable
 (name extlib_test)
 (libraries extlib)
 (modules extlib_test)
)

(rule
 (alias runtest)
 (action (run ./extlib_test.exe))
)

(executable
 (name affine)
 (libraries autograd)
 (modules affine)
)

(rule
 (alias runtest)
 (action (run ./affine.exe))
)

(executable
 (name square)
 (libraries autograd)
 (modules square)
)

(rule
 (alias runtest)
 (action (run ./square.exe))
)

