(executable
 (name train0)
 (modules train0)
 (libraries extlib)
)

(executable
 (name train1)
 (modules train1)
 (libraries extlib)
)

(executable
 (name train2)
 (modules train2)
 (libraries extlib autograd)
)

(executable
 (name train3)
 (modules train3)
 (libraries extlib autograd)
)

(executable
 (name train4)
 (modules train4)
 (libraries extlib autograd)
)
